fix : add vertical-align for icons

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -206,6 +206,7 @@ body {
  */
 .svg-inline--fa{
 	height: 1em;
+	vertical-align: -.125em;
 }
 
 /* Sticky footer styling */
